@@ -7,11 +7,10 @@ namespace Fraunhofer.Fit.IoT.LoraMap.Model
   public class Crowd
   {
     public Int32 DensityCount { get; private set; }
-    public DateTime LastUpdate { get; private set; }
+    public DateTime TimeStamp { get; private set; }
     public Double AverageFlowMagnitude { get; private set; }
     public Double AverageFlowDirection { get; private set; }
-    public Double Cofidence { get; private set; }
-    public String Situation { get; private set; }
+    public DateTime LastUpdate { get; private set; }
 
     public Crowd(JsonData json) => this.Update(json);
 
@@ -27,19 +26,13 @@ namespace Fraunhofer.Fit.IoT.LoraMap.Model
       json.ContainsKey("average_flow_direction") && json["average_flow_direction"].IsArray &&
       json.ContainsKey("timestamp") && json["timestamp"].IsString;
 
-    public static Boolean CheckJsonFightingDetection(JsonData json) => json.ContainsKey("camera_ids") && json["camera_ids"].IsArray && json["camera_ids"].Count == 1 &&
-      json.ContainsKey("confidence") && json["confidence"].IsDouble &&
-      json.ContainsKey("type_module") && json["type_module"].IsString && json["type_module"].ToString() == "fighting_detection" &&
-      json.ContainsKey("situation") && json["situation"].IsString &&
-      json.ContainsKey("timestamp") && json["timestamp"].IsString;
-
     public static String GetId(JsonData json) => (String)json["camera_ids"][0];
 
     public void Update(JsonData json) {
       if(CheckJsonCrowdDensityLocal(json)) {
         this.DensityCount = (Int32)json["density_count"];
         if (DateTime.TryParse((String)json["timestamp1"], DateTimeFormatInfo.InvariantInfo, DateTimeStyles.AssumeUniversal, out DateTime updatetime)) {
-          this.LastUpdate = updatetime.ToUniversalTime();
+          this.TimeStamp = updatetime.ToUniversalTime();
         }
       } else if(CheckJsonFlow(json)) {
         if (json["average_flow_magnitude"].Count == 1) {
@@ -49,15 +42,10 @@ namespace Fraunhofer.Fit.IoT.LoraMap.Model
           this.AverageFlowDirection = (Double)json["average_flow_direction"][0];
         }
         if (DateTime.TryParse((String)json["timestamp"], DateTimeFormatInfo.InvariantInfo, DateTimeStyles.AssumeUniversal, out DateTime updatetime)) {
-          this.LastUpdate = updatetime.ToUniversalTime();
+          this.TimeStamp = updatetime.ToUniversalTime();
         }
-      } else if(CheckJsonFightingDetection(json)) {
-        this.Cofidence = (Double)json["confidence"];
-        this.Situation = (String)json["situation"];
-        if (DateTime.TryParse((String)json["timestamp"], DateTimeFormatInfo.InvariantInfo, DateTimeStyles.AssumeUniversal, out DateTime updatetime)) {
-          this.LastUpdate = updatetime.ToUniversalTime();
-        }
-      }
+      } 
+      this.LastUpdate = DateTime.UtcNow;
     }
   }
 }
