@@ -5,6 +5,7 @@
 * Add setting model to code
 * #19 grid automatisch generieren
 * #24 Add information about weather/warning
+* #28 Fightdedection Plygon on Map
 ### Bugfixes
 * Add Correct Dispose Handling
 * TimeCalculation now handle negative values correct
